--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,26 @@
             margin: 5px 0;
         }
 
+        .crud-table {
+            display: flex;
+        }
+
+        .crud-show {
+            padding: 10px;
+        }
+
+        .crud-but button {
+            padding: 5px;
+            margin: 0 5px;
+        }
+
+        .crud-input {
+            margin-top: 20px;
+        }
+
+        td {
+            padding: 2px 5px;
+        }
     </style>
 </head>
 <body>
@@ -32,6 +52,8 @@
     <button class="to-but">创建token</button>
     &emsp;&emsp;
     <button class="to-vsbut">解密token</button>
+
+    <button class="to-select-token">访问会检测token的接口</button>
     <div class="to-so">
         <span>token：</span>
         <p></p>
@@ -41,9 +63,67 @@
         <p></p>
     </div>
 </div>
+<div class="div-style">
+    <h2>crud</h2>
+    <div class="crud-table">
+        <div class="crud-show">
+            <table border="1" id="table-add-el">
+                <tr>
+                    <td>id</td>
+                    <td>zh</td>
+                    <td>mm</td>
+                    <td>name</td>
+                </tr>
+            </table>
+        </div>
+        <div class="crud-p crud-show">
+            <table border="1" id="table-add-el2">
+            </table>
+        </div>
+    </div>
+    <div class="crud-but">
+        <button>查询整表</button>
+        <button>查询单个</button>
+        <button>修改</button>
+        <button>添加</button>
+        <button>删除</button>
+    </div>
+    <div class="crud-input">
+        <h5>修改根据id进行所有请输入id,添加就算了，删除也是根据id来</h5>
+        <br>
+        账号：<input type="text" name="zh"/>
+        密码：<input type="text" name="mm"/>
+        名字：<input type="text" name="name"/>
+        ID：<input type="text" name="id"/>
+    </div>
+</div>
 </body>
 <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 <script>
+    axios.defaults.baseURL = 'http://localhost:4370'
+
+    function shouji(clas) {
+        const div = document.querySelector(clas).querySelectorAll('input[type=text]')
+        const value = []
+        div.forEach(item => {
+            value.push({ v: item.value, e: item.name })
+        })
+        return value
+    }
+
+    function tableEl(data, cla) {
+        const elstr = `
+        <td>${data.id}</td>
+        <td>${data.zh}</td>
+        <td>${data.mm}</td>
+        <td>${data.name}</td>
+        `
+        const tr = document.createElement('tr')
+        tr.id = `trid${data.id}`
+        tr.innerHTML = elstr
+        document.querySelector(cla).appendChild(tr)
+    }
+
     let files = null;
     document.querySelector('#file').addEventListener('change', function () {
         console.log('asdkjhaslkdahskd')
@@ -69,8 +149,7 @@
             console.log('请求错误', err)
         })
     }
-</script>
-<script>
+
     let token = ''
     document.querySelector('.to-but').onclick = function () {
         axios({
@@ -94,10 +173,105 @@
             alert('请先创建token')
             return;
         }
-        axios.post('/web/jwt/Verify', {token}, {responseType: 'json'}).then(res => {
+        axios.post('/web/jwt/Verify', { token }, { responseType: 'json' }).then(res => {
             console.log('解密token：', res)
             document.querySelector('.to-vs').querySelector('p').innerHTML = JSON.stringify(res.data)
         })
     }
+
+    document.querySelector('.to-select-token').onclick = function () {
+        axios.get('/token').then(res => {
+            alert('访问成功')
+        }).catch(e => {
+            console.log('请求 /token 接口失败:', e)
+            alert('访问失败，可以打开控制台查看错误信息')
+        })
+    }
+
+
+    /*
+    0 查询整个表
+    1 查询单条
+    2 修改
+    3 添加
+    4 删除
+    * */
+    const crudbut = document.querySelector('.crud-but').querySelectorAll('button')
+
+    /* 请求前的处理 */
+    function useButClk(index) {
+        const data = { crudtyle: index }
+
+        if (index === 0) return data
+
+        const crudinput = shouji('.crud-input')
+
+        if (index === 1) {
+            data.selectWhere = {
+                id: crudinput.at(-1).v || 1
+            }
+            return data
+        }
+
+        if (index === 2) {
+            const update = {}
+            crudinput.forEach(item => {
+                update[item.e] = item.v
+            })
+            data.update = update
+            return data
+        }
+
+        if (index === 3) {
+            const add = {}
+            for (let i = 0; i < 3; i++) {
+                add[crudinput[i].e] = crudinput[i].v
+            }
+            data.add = add
+            return data
+        }
+
+        data.del = crudinput.at(-1).v
+        return data
+    }
+
+    function butclk(index) {
+        return async function () {
+            const data = useButClk(index)
+            const response = await axios.post('/sql/crud', data)
+
+            /* 请求完成的处理 */
+            if (index === 0 || index === 3) {
+                const { data } = response.data
+                data.forEach(item => {
+                    tableEl(item, '#table-add-el')
+                })
+            }
+
+            if (index === 1) {
+                tableEl(response.data.data[0], '#table-add-el2')
+            }
+
+            if (index === 2) {
+                const trid = document.querySelector(`#trid${data.update.id}`)
+                trid.innerHTML = `
+                    <td>${data.update.id}</td>
+                    <td>${data.update.zh}</td>
+                    <td>${data.update.mm}</td>
+                    <td>${data.update.name}</td>
+                `
+            }
+
+            if (index === 4) {
+                document.querySelector(`#trid${data.del}`).remove()
+            }
+        }
+    }
+
+    crudbut.forEach((item, index) => {
+        item.onclick = butclk(index)
+    })
+
 </script>
+
 </html>
